fix: changed overflow of sidebar to overflow-x so vertical scrollbar appears with large amounts of projects

--- a/src/style.css
+++ b/src/style.css
@@ -35,7 +35,7 @@ body, html {
     color: white;
     padding: 40px 0 0 30px;
     min-width: 0;
-    overflow: hidden;
+    overflow-x: hidden;
     text-overflow: ellipsis;
 }
 
